--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div>
   <h2>About</h2>
   <ul>
-    <li *ngFor="let item of info">
-      Version: {{ item.version }} Note: {{ item.message }}
-    </li>
+    <p *ngFor="let item of info">
+      Version: {{ item.version }}<br>Message: {{ item.message }}
+    </p>
   </ul>
 </div>
