--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
 <nav class="site-navigation">
   <a routerLink="/">Home</a>
   <a routerLink="/auth">Authentication</a>
-  <a routerLink="#">Example</a>
+  <a routerLink="/events">Events</a>
 </nav>
 <main>
   <router-outlet></router-outlet>
