--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,11 +1,12 @@
 <div>
-  <ul>
-    <li *ngFor="let alarm of alarms">
-      {{ alarm.type }} {{ alarm.content }}
-    </li>
-  </ul>
-</div>
-<div>
   <h2>Send a test event</h2>
   <button (click)="pushEvent()">Send event</button>
+</div>
+<div>
+  <h2>Received events</h2>
+  <ul>
+    <li *ngFor="let alarm of alarms">
+      {{ alarm.content }}
+    </li>
+  </ul>
 </div>
